hphp/hack/test/typecheck/function_pointer/reified_targs_return_type.php.exp
File "reified_targs_return_type.php", line 8, characters 10-17:
Invalid return type (Typing[4110])
  File "reified_targs_return_type.php", line 7, characters 37-42:
  Expected `string`
  File "reified_targs_return_type.php", line 8, characters 14-16:
  But got `int`
  File "reified_targs_return_type.php", line 3, characters 30-30:
    via this generic `T`
File "reified_targs_return_type.php", line 8, characters 10-17:
Invalid return type (Typing[4110])
  File "reified_targs_return_type.php", line 8, characters 14-16:
  Expected `int`
  File "reified_targs_return_type.php", line 3, characters 23-23:
    via this generic `T`
  File "reified_targs_return_type.php", line 7, characters 28-33:
  But got `string`
