hphp/hack/test/typecheck/function_pointer/reified_targs_return_type.php
<?hh

function foo<reify T>(T $x): T {
  return $x;
}

function test(): (function(string): string) {
  return foo<int>;
}
